Hoàn thiện quản lý thương hiệu, nhà cung cấp, sản pham, sửa lỗi phất sinh